--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -48,7 +48,7 @@
 
 @media screen and (max-width: 630px) {
   #nav ul {
-    margin-left:-114px
+    margin-left:-175px;
   }
 }
 
@@ -64,7 +64,7 @@
 #nav li {
   display: none;
   opacity: 0;
-  margin-right: 80px;
+  margin-right: 75px;
   -webkit-transition: opacity .3s ease-out;
   -moz-transition: opacity .3s ease-out;
   -o-transition: opacity .3s ease-out;
